[package]
name = "enf-tool-box"
version = "0.1.0"
authors = ["Travrei <qjogos7@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }
# Debug
dioxus-logger = "0.5.1"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde_json = "1.0.128"
